🔥 Fix definitivo: export sin conflicto de Webpack

--- a/app.json
+++ b/app.json
@@ -5,8 +5,8 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
+    "userInterfaceStyle": "automatic",
     "web": {
-      "bundler": "webpack",
       "favicon": "./assets/images/favicon.png"
     }
   }
