--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "build": "expo export"
-  },
+  "start": "expo start",
+  "build": "expo export --without-env --output dist",
+  "dev": "expo start --dev-client",
+  "preview": "vercel --preview",
+  "lint": "expo lint"
+},
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
