--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "triggui-app",
   "version": "1.0.0",
   "main": "expo-router/entry",
+  "private": true,
   "scripts": {
-  "start": "expo start",
-  "build": "expo export --without-env --output dist",
-  "dev": "expo start --dev-client",
-  "preview": "vercel --preview",
-  "lint": "expo lint"
-},
+    "dev": "expo start",
+    "build": "expo export --output dist",
+    "preview": "vercel --preview",
+    "lint": "expo lint"
+  },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@expo/webpack-config": "^19.0.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.46",
@@ -45,6 +46,5 @@
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
-  },
-  "private": true
+  }
 }
