--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,24 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
-node_modules/
+# Node
+node_modules
+npm-debug.log
 
 # Expo
-.expo/
-web-build/
-expo-env.d.ts
-
-# Native
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-
-# Metro
-.metro-health-check*
-
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
+.expo
+.expo-shared
 
 # macOS
 .DS_Store
-*.pem
 
-# local env files
-.env*.local
+# Web build
+dist
+web-build
 
-# typescript
+# Vercel
+.vercel
+
+# TypeScript
 *.tsbuildinfo
 
-app-example
+# IDEs
+.idea
+.vscode
