--- a/app.json
+++ b/app.json
@@ -2,37 +2,9 @@
   "expo": {
     "name": "Triggui",
     "slug": "triggui-app",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "userInterfaceStyle": "light",
-    "icon": "./assets/images/icon.png",
-    "splash": {
-      "image": "./assets/images/splash-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": ["**/*"],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
+    "platforms": ["ios", "android", "web"],
     "web": {
-      "bundler": "metro",
       "favicon": "./assets/images/favicon.png"
-    },
-    "plugins": ["expo-router"],
-    "extra": {
-      "expo-router": {
-        "origin": "web"
-      }
     }
   }
 }
