--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -1,5 +1,12 @@
 {
+  "cli": {
+    "version": ">= 3.13.0"
+  },
   "build": {
+    "preview": {
+      "developmentClient": true,
+      "distribution": "internal"
+    },
     "production": {
       "android": {
         "buildType": "apk"
