--- a/mobile/app.json
+++ b/mobile/app.json
@@ -13,10 +13,7 @@
       "supportsTablet": true
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
+      "package": "com.triggui.app"
     },
     "web": {
       "favicon": "./assets/favicon.png"
