--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -4,8 +4,8 @@
   },
   "build": {
     "preview": {
-      "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "developmentClient": true
     },
     "production": {
       "android": {
