--- a/mobile/package.json
+++ b/mobile/package.json
@@ -3,15 +3,13 @@
   "version": "1.0.0",
   "main": "App.tsx",
   "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
+    "start": "expo start"
   },
   "dependencies": {
     "expo": "~50.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.0"
+    "react-native": "0.73.0",
+    "expo-dev-client": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
