--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -3,6 +3,10 @@
     "version": ">= 3.13.0"
   },
   "build": {
+    "development": {
+      "distribution": "internal",
+      "developmentClient": true
+    },
     "preview": {
       "distribution": "internal",
       "developmentClient": true
