--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -1,23 +1,16 @@
 {
-  "cli": {
-    "version": ">= 3.13.0"
-  },
+  "cli": { "version": ">= 3.18.0" },
   "build": {
-    "development": {
-      "distribution": "internal",
-      "developmentClient": true
-    },
-    "preview": {
-      "distribution": "internal",
-      "developmentClient": true
-    },
     "production": {
-      "android": {
-        "buildType": "apk"
-      },
-      "ios": {
-        "simulator": true
-      }
+      "credentialsSource": "remote",
+      "android": { "buildType": "app-bundle" },
+      "ios": { "resourceClass": "m1-medium" },
+      "env": { "APP_URL": "https://app.triggui.com" }
+    }
+  },
+  "submit": {
+    "production": {
+      "android": { "track": "internal" }
     }
   }
 }
