--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "triggui-mobile",
+  "name": "triggui-app",
+  "private": true,
   "version": "1.0.0",
-  "main": "App.tsx",
+  "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start"
+    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.0",
+    "expo": "^52.0.0",
+    "expo-linking": "~6.3.1",
+    "expo-status-bar": "~2.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.0",
-    "expo-dev-client": "^2.0.0"
+    "react-native": "0.74.0",
+    "react-native-webview": "^13.8.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+    "typescript": "~5.3.3",
+    "babel-preset-expo": "~11.0.0"
+  }
 }
