--- a/mobile/app.json
+++ b/mobile/app.json
@@ -3,29 +3,11 @@
     "name": "TrigguiApp",
     "slug": "trigguiapp",
     "owner": "badirnakid",
-    "scheme": "triggui",
     "version": "1.0.0",
     "orientation": "portrait",
-    "platforms": ["ios", "android"],
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
     "assetBundlePatterns": ["**/*"],
-    "ios": {
-      "bundleIdentifier": "com.triggui.app",
-      "supportsTablet": false
-    },
-    "android": {
-      "package": "com.triggui.app"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "extra": {
-      "APP_URL": "https://app.triggui.com",
-      "eas": {
-        "projectId": "1417880a-2431-4ef5-a6a0-c5962b11ddd4"
-      }
-    }
+    "ios": { "supportsTablet": true, "bundleIdentifier": "com.triggui.app" },
+    "android": { "package": "com.triggui.app" },
+    "extra": { "eas": { "projectId": "1417880a-2431-4ef5-a6a0-c5962b11ddd4" } }
   }
 }
