--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -1,13 +1,20 @@
 {
+  "cli": {
+    "version": ">= 3.17.0"
+  },
   "build": {
-    "production": {
-      "android": { "buildType": "app-bundle" },
-      "ios": { "simulator": false }
+    "preview": {
+      "android": {
+        "buildType": "apk"
+      }
+    },
+    "release": {
+      "android": {
+        "buildType": "app-bundle"
+      }
     }
   },
   "submit": {
-    "production": {
-      "android": { "track": "internal" }
-    }
+    "production": {}
   }
 }
