--- a/mobile/package.json
+++ b/mobile/package.json
@@ -2,6 +2,7 @@
   "name": "trigguiapp",
   "version": "1.0.0",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -12,14 +13,14 @@
   "dependencies": {
     "expo": "^51.0.0",
     "expo-status-bar": "~1.12.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-web": "~0.19.10"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-web": "~0.19.10",
+    "react-native-webview": "13.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "babel-preset-expo": "~12.0.0"
-  },
-  "private": true
+    "babel-preset-expo": "~11.0.0"
+  }
 }
