--- a/mobile/app.json
+++ b/mobile/app.json
@@ -15,13 +15,19 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon-1024.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.triggui.app"
     },
     "ios": {
       "supportsTablet": true
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "1417880a-2431-4ef5-a6a0-c5962b11ddd4"
+      }
     }
   }
 }
