--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,7 +17,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "13.8.6",
+    "react-native-safe-area-context": "4.10.5",
+    "@react-native-community/netinfo": "11.3.1",
+    "expo-splash-screen": "~0.27.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
