--- a/mobile/app.json
+++ b/mobile/app.json
@@ -10,15 +10,15 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#0e0f1b",
-      "fadeOutDuration": 1200
+      "backgroundColor": "#000000",
+      "fadeOutDuration": 1000
     },
 
     "android": {
       "package": "com.triggui.app",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon-1024.png",
-        "backgroundColor": "#0e0f1b"
+        "backgroundColor": "#000000"
       }
     },
 
