--- a/mobile/app.json
+++ b/mobile/app.json
@@ -6,30 +6,24 @@
     "orientation": "portrait",
     "icon": "./assets/adaptive-icon-1024.png",
     "userInterfaceStyle": "light",
-
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#000000",
-      "fadeOutDuration": 1500
+      "backgroundColor": "#0e0f1b"
     },
-
     "android": {
       "package": "com.triggui.app",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon-1024.png",
-        "backgroundColor": "#000000"
+        "backgroundColor": "#0e0f1b"
       }
     },
-
     "ios": {
       "supportsTablet": true
     },
-
     "web": {
       "favicon": "./assets/favicon.png"
     },
-
     "extra": {
       "eas": {
         "projectId": "1417880a-2431-4ef5-a6a0-c5962b11ddd4"
