--- a/mobile/app.json
+++ b/mobile/app.json
@@ -3,7 +3,7 @@
     "name": "TrigguiApp",
     "slug": "trigguiapp",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/adaptive-icon-1024.png",
     "userInterfaceStyle": "light",
     "splash": {
