fix: nombre corto + status bar visible en Stripe

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "TrigguiApp",
+    "name": "Triggui",
     "slug": "trigguiapp",
     "version": "1.0.0",
     "orientation": "default",
