--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -10,7 +10,8 @@
         "buildType": "app-bundle"
       },
       "ios": {
-        "simulator": false
+        "simulator": false,
+        "image": "latest"
       }
     },
     "preview": {
